# devjournal

./: .gitignore  Cargo.toml  README.md
src/: app.rs  crypto.rs  journal.rs  journal~.rs  main.rs  styles.rs  ui.rs
src/app/: appstate.rs  data.rs  list.rs  project.rs
src/ui/: events.rs  styles.rs  widgets.rs
src/ui/widgets/: files.rs  list.rs  project.rs  prompt.rs
