[package]
name = "devboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
tui-textarea = "0.2.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
bincode = "1.3.3"
platform-dirs = "0.3.0"
